cleanup/compaction: dependencies upgrade, JDK17, lombok